<resources>
    <string name="app_name">Mighty ID</string>
    <string name="facebook_app_id">1292088657825384</string>
    <string name="fb_login_protocol_scheme">fb1292088657825384</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_contact">Contact</string>
    <string name="title_setting">Setting</string>
    <string name="btn_skip">Login</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="message_welcome">Welcome to Work ID</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Create Account</string>
    <string name="sign_in_with">Or sign up with your social account</string>
    <string name="action_sign_in">Don\'t have an account? Sign up</string>
    <string name="incoming_message">Incoming %1$s request from %2$s …</string>
    <string name="outgoing_message">Calling to %1$s…</string>
    <string name="first_slide_title">Free calls and conferences</string>
    <string name="first_slide_header">
We are offering free high-quality services for individual, mini call, and conference call with less than 5 participants. However, if you need bigger room, it will cost you less than a dollar.
    </string>
    <string name="second_slide_title">New level of safety and quality</string>
    <string name="third_slide_title">Not just an app, it is a lifestyle</string>
    <string name="second_slide_header">
We take pride in providing high level of quality and safety to our clients. Our team is dedicated to protecting your privacy and data as you navigate and communicate through our system.
    </string>
    <string name="third_slide_header">
This is not just another calling application or conference platform. What we offer is an innovative way to make friends, expand your social interactions, work efficiently, and do better business.    </string>
    <string name="action_calling">Calling…</string>
    <string name="message_call_end">Call Ended.</string>
    <string name="outgoing_group_call">Establishing %1$s meeting …</string>
    <string name="notification_call_message">Incoming WorkID %1$s Call…</string>
    <string name="title_activity_user_detail2">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="christian_charles_n_philip_bale">Christian Bale</string>
    <string name="christian_bale">Christian Bale</string>
    <string name="user_name">Tran Quang Minh</string>
    <string name="user_last_seen">last seen recently</string>
    <string name="invalid_user_email">Invalid email format</string>
    <string name="invalid_password">Password is not strong enough</string>
    <string name="sign_in_with_email_and_password_failed">Password invalid or username are not exist</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="message_term_and_policy">By clicking Create my WorkID, you agree to our Terms and that you have read our Privacy Policy, including our Cookie Use.</string>
    <string name="create_my_work_id">Create my Work ID</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="display_name">Display name</string>
    <string name="create_an_account">Create an account</string>
    <string name="invalid_email">Invalid email, please try again</string>
    <string name="email_existed">Email is existed,please use another email</string>
    <string name="password_rules">A Password must:</string>
    <string name="is_6_characters">⚬ Have at least 6 characters.</string>
    <string name="is_1_lowercase_letter">⚬ Have at least lowercase  1 letter (a,b,c …).</string>
    <string name="is_1_capital_letter">⚬ Have at least uppercase  1 letter (A,B,C …).</string>
    <string name="is_1_number">⚬ Have at least 1 number (1,2,3).</string>
    <string name="title_history">History</string>
    <string name="action_share_contact">Share contact</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="check_your_email">Check your email</string>
    <string name="forgot_password_step_2_message">We have send your an email recover in your mailbox</string>
    <string name="action_open_mail_app">Open Mail App</string>
    <string name="skip_i_ll_confirm_it_later">Skip, I\'ll confirm it later</string>
    <string name="action_change_email">Did not receive the mail? Check your spam filter, or \ntry another email address</string>
    <string name="title_call">Call</string>
    <string name="reply">Reply</string>
    <string name="title_video_call">Video Call</string>
    <string name="show_more">Show_more</string>
    <string name="add_user">Add user</string>
    <string name="rename_topic">Rename topic</string>
    <string name="change_topic_photo">Change topic photo</string>
    <string name="see_topic_members">See topic members</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="clear_history">Clear history</string>
    <string name="add_nickname">Add nickname</string>
    <string name="action_save">Save</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="action_delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="action_unfriend_contact">Unfriend</string>
    <string name="status_confirm">Confirm</string>
    <string name="status_pending">Pending</string>
    <string name="status_reject">Reject</string>
    <string name="status_fail">Fail</string>
    <string name="status_complete">Complete</string>
    <string name="update_status">Update status</string>
</resources>