<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.main.ui.message.chatRoom.home.ChatRoomActivity">
    <item
        android:id="@+id/menu_call"
        android:orderInCategory="50"
        android:title="@string/title_call"
        android:icon="@drawable/ic_phone"
        android:iconTint="@color/primary_color"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_video_call"
        android:orderInCategory="60"
        android:title="@string/title_video_call"
        android:icon="@drawable/ic_videocall"
        android:iconTint="@color/primary_color"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_show_more"
        android:orderInCategory="70"
        android:title="@string/show_more"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vert">
        <menu>
            <item
                android:id="@+id/menu_add_user"
                android:title="@string/add_user"
                android:orderInCategory="10"
                android:icon="@drawable/ic_person_add"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_view_all_user"
                android:title="@string/see_topic_members"
                android:orderInCategory="20"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_group"/>
            <item
                android:id="@+id/menu_edit_topic_name"
                android:title="@string/rename_topic"
                android:icon="@drawable/ic_edit"
                android:orderInCategory="30"
                android:iconTint="@color/primary_color"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_change_topic_photo"
                android:orderInCategory="40"
                android:title="@string/change_topic_photo"
                android:icon="@drawable/ic_change_topic_avatar"
                app:showAsAction="ifRoom">
                <menu>
                    <item
                        android:id="@+id/take_photo"
                        android:title="@string/take_photo"
                        android:orderInCategory="10"
                        app:showAsAction="ifRoom"/>
                    <item
                        android:id="@+id/choose_from_gallery"
                        android:title="@string/choose_from_gallery"
                        android:orderInCategory="20"
                        app:showAsAction="ifRoom"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>