<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mightyId.activities.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_userDetailActivity"
            app:destination="@id/userDetailActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.mightyId.activities.main.ui.message.home.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" >
        <action
            android:id="@+id/action_navigation_message_to_createNewTopicFragment"
            app:destination="@id/createNewTopicFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.mightyId.activities.main.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" >
        <action
            android:id="@+id/action_navigation_contact_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_contact_to_userDetailActivity"
            app:destination="@id/userDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mightyId.activities.main.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.mightyId.activities.main.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_userDetailActivity"
            app:destination="@id/userDetailActivity" />
    </fragment>

    <dialog
        android:id="@+id/searchFragment"
        android:name="com.mightyId.activities.search.SearchFragment"
        android:label="SearchFragment"
        tools:layout="@layout/fragment_search">
    </dialog>
    <activity
        android:id="@+id/userDetailActivity"
        android:name="com.mightyId.activities.userDetails.UserDetailActivity"
        android:label="UserDetailActivity"
        tools:layout="@layout/activity_user_detail"/>
    <dialog
        android:id="@+id/createNewTopicFragment"
        android:name="com.mightyId.activities.main.ui.message.createNewTopic.CreateNewTopicFragment"
        android:label="fragment_create_new_topic"
        tools:layout="@layout/fragment_create_new_topic" />
    <activity
        android:id="@+id/chatRoomActivity"
        android:name="com.mightyId.activities.main.ui.message.chatRoom.home.ChatRoomActivity"
        android:label="activity_chat_room"
        tools:layout="@layout/activity_chat_room" />

</navigation>