<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_mail_inbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.257" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/check_your_email"
            android:textSize="@dimen/text_large_size"
            app:layout_constraintEnd_toEndOf="@+id/image_view"
            app:layout_constraintStart_toStartOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/forgot_password_step_2_message"
            android:textSize="@dimen/text_small_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_open_mail_app"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_default_height"
            android:layout_margin="24dp"
            android:autoSizeMaxTextSize="@dimen/button_max_text"
            android:autoSizeTextType="uniform"
            android:text="@string/action_open_mail_app"
            android:textColor="@color/text_color"
            android:textAllCaps="false"
            android:textSize="@dimen/text_button_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8" />

        <TextView
            android:id="@+id/action_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/skip_i_ll_confirm_it_later"
            android:textSize="@dimen/text_medium_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/action_open_mail_app"
            app:layout_constraintStart_toStartOf="@+id/action_open_mail_app"
            app:layout_constraintTop_toBottomOf="@+id/action_open_mail_app"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/try_another_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColorLink="@color/com_facebook_messenger_blue"
            android:textColorHighlight="@color/accent_white"
            android:text="@string/action_change_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>